--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.2.6",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
     "@types/cookie": "^0.5.1",
     "@types/jsonwebtoken": "^8.5.8",
     "cookie": "^0.5.0",
+    "framer-motion": "^7.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.0",
     "next": "12.2.3",
     "node-fetch": "2.6.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.34.1",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@types/node": "18.6.3",
